# serializer version: 1
# name: test_all_entities[notify.ha_gateway_channel_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'notify',
    'entity_category': None,
    'entity_id': 'notify.ha_gateway_channel_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Channel 0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel 0',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <NotifyEntityFeature: 1>,
    'translation_key': 'channel',
    'unique_id': '!2e9545b8_channel_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[notify.ha_gateway_channel_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HA Gateway Channel 0',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <NotifyEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'notify.ha_gateway_channel_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[notify.ha_gateway_channel_admin-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'notify',
    'entity_category': None,
    'entity_id': 'notify.ha_gateway_channel_admin',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Channel admin',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Channel admin',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <NotifyEntityFeature: 1>,
    'translation_key': 'channel',
    'unique_id': '!2e9545b8_channel_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[notify.ha_gateway_channel_admin-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'HA Gateway Channel admin',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <NotifyEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'notify.ha_gateway_channel_admin',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_entities[notify.remote_one_direct_message-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'notify',
    'entity_category': None,
    'entity_id': 'notify.remote_one_direct_message',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Direct message',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Direct message',
    'platform': 'meshtastic',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <NotifyEntityFeature: 1>,
    'translation_key': 'direct_message',
    'unique_id': '!2e9545b8_!aabbccdd_direct_message',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[notify.remote_one_direct_message-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Remote One Direct message',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <NotifyEntityFeature: 1>,
    }),
    'context': <ANY>,
    'entity_id': 'notify.remote_one_direct_message',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
